# cosim-fault-injection

./: .gitignore  Dockerfile  README.md  ROS2_config_cc.json  install_software.sh  pyproject.toml
minimal_publisher/: CMakeLists.txt  member_function.cpp  package.xml
simple_gridlabd_example/: cc_run_example.sh  run_example_cc.sh
simple_gridlabd_example/CC/: CC_config.json  CC_simulator.py
simple_gridlabd_example/Relay/: Relay_config.json  Relay_simulator.py
