[project]
name = "cps-cosimulation-env"
version = "0.1.0"
description = "Python CPS co-simulation environment"
readme = "README.md"
authors = [
    { name = "Will Stuckey", email = "guyfleeman@gmail.com" }
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "scipy>=1.11.2,<2.0.0",
    "pypower>=5.1.16,<6.0.0",
    "helics[cli]>=3.4.0,<4.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "scipy>=1.11.2,<2.0.0",
    "pypower>=5.1.16,<6.0.0",
    "helics>=3.4.0,<4.0.0",
    "numpy==1.26",
]

